Fix Sync Projects Bug

--- a/src/app/pages/@theme/modals/modals.component.html
+++ b/src/app/pages/@theme/modals/modals.component.html
@@ -103,7 +103,7 @@
     <card>
       <card-header>
         <card-title>
-          Confirmation Modal
+          Confirmation
         </card-title>
       </card-header>
 
@@ -236,13 +236,13 @@
   <modal-body>
     <form>
       <div class="form-group">
-        <label for="recipient-name" class="col-form-label">Recipient:</label>
-        <input type="text" class="form-control" id="recipient-name">
+        <label> Recipient: </label>
+        <input type="text" class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="message-text" class="col-form-label">Message:</label>
-        <textarea class="form-control" id="message-text"></textarea>
+        <label> Message: </label>
+        <textarea class="form-control"></textarea>
       </div>
     </form>
   </modal-body>
@@ -258,13 +258,13 @@
   <modal-body>
     <form>
       <div class="form-group">
-        <label for="recipient-name" class="col-form-label">Recipient:</label>
-        <input type="text" class="form-control" id="recipient-name">
+        <label> Recipient: </label>
+        <input type="text" class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="message-text" class="col-form-label">Message:</label>
-        <textarea class="form-control" id="message-text"></textarea>
+        <label> Message: </label>
+        <textarea class="form-control"></textarea>
       </div>
     </form>
   </modal-body>
@@ -280,13 +280,13 @@
   <modal-body>
     <form>
       <div class="form-group">
-        <label for="recipient-name" class="col-form-label">Recipient:</label>
-        <input type="text" class="form-control" id="recipient-name">
+        <label> Recipient: </label>
+        <input type="text" class="form-control">
       </div>
 
       <div class="form-group">
-        <label for="message-text" class="col-form-label">Message:</label>
-        <textarea class="form-control" id="message-text"></textarea>
+        <label> Message: </label>
+        <textarea class="form-control"></textarea>
       </div>
     </form>
   </modal-body>
