--- a/src/app/pages/@theme/alerts/alerts.component.html
+++ b/src/app/pages/@theme/alerts/alerts.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-title>
@@ -13,32 +13,32 @@
 
       <card-body>
         <div class="row">
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertTitleSuccess()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertTitleSuccess()">
               Success
             </button>
           </div>
 
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertTitleError()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertTitleError()">
               Error
             </button>
           </div>
 
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertTitleWarning()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertTitleWarning()">
               Warning
             </button>
           </div>
 
-          <div class="col-md-6">
-            <button class="btn btn-primary col-md-12" (click)="openAlertTitleInfo()">
+          <div class="col-xl-6">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertTitleInfo()">
               Info
             </button>
           </div>
 
-          <div class="col-md-6">
-            <button class="btn btn-primary col-md-12" (click)="openAlertTitleDark()">
+          <div class="col-xl-6">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertTitleDark()">
               Dark
             </button>
           </div>
@@ -47,7 +47,7 @@
     </card>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-title>
@@ -57,32 +57,32 @@
 
       <card-body>
         <div class="row">
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertDescriptionSuccess()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionSuccess()">
               Success
             </button>
           </div>
 
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertDescriptionError()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionError()">
               Error
             </button>
           </div>
 
-          <div class="col-md-4">
-            <button class="btn btn-primary col-md-12" (click)="openAlertDescriptionWarning()">
+          <div class="col-xl-4">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionWarning()">
               Warning
             </button>
           </div>
 
-          <div class="col-md-6">
-            <button class="btn btn-primary col-md-12" (click)="openAlertDescriptionInfo()">
+          <div class="col-xl-6">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionInfo()">
               Info
             </button>
           </div>
 
-          <div class="col-md-6">
-            <button class="btn btn-primary col-md-12" (click)="openAlertDescriptionDark()">
+          <div class="col-xl-6">
+            <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionDark()">
               Dark
             </button>
           </div>
