--- a/src/app/pages/@theme/modals/modals.component.html
+++ b/src/app/pages/@theme/modals/modals.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -12,14 +12,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#defaultModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#defaultModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -28,14 +28,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#verticalCenteredModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#verticalCenteredModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -44,14 +44,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#scrollingModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#scrollingModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -60,14 +60,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#smallModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#smallModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -76,14 +76,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#largeModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#largeModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -92,14 +92,14 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#extraLargeModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#extraLargeModal">
           Launch Modal
         </button>
       </card-body>
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -108,7 +108,7 @@
       </card-header>
 
       <card-body>
-        <button class="btn btn-primary col-md-12" data-toggle="modal" data-target="#confirmationModal">
+        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#confirmationModal">
           Launch Modal
         </button>
       </card-body>
