--- a/src/app/pages/@trello/manage-projects/manage-project/manage-project.component.html
+++ b/src/app/pages/@trello/manage-projects/manage-project/manage-project.component.html
@@ -6,24 +6,24 @@
 
   <modal-body>
     <form [formGroup]="trelloForm">
-      <div class="col-md-12">
+      <div class="col-xl-12">
         <div class="form-group">
           <label> Trello Project </label>
           <input class="form-control" type="text" placeholder="Trello URL" formControlName="url">
         </div>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-xl-12">
         <div class="form-group">
           <label> Sync Project Every </label>
 
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-xl-6">
               <input class="form-control" type="number" formControlName="expiryQuantity">
               <small> 0 sync project every page load </small>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-xl-6">
               <select class="form-control" formControlName="expiryType">
                 <option value=1> Days </option>
                 <option value=31> Months </option>
