--- a/src/app/pages/@trello/overview/overview.component.scss
+++ b/src/app/pages/@trello/overview/overview.component.scss
@@ -31,8 +31,8 @@
       padding-left: 15px;
       padding-right: 15px;
 
-      .col-md-5,
-      .col-md-7 {
+      .col-xl-5,
+      .col-xl-7 {
         padding: 0;
       }
     }
