--- a/src/app/pages/@trello/shared/loading-projects/loading-projects.component.html
+++ b/src/app/pages/@trello/shared/loading-projects/loading-projects.component.html
@@ -6,7 +6,7 @@
   </card-header>
 
   <card-body>
-    <div class="col-md-12">
+    <div class="col-xl-12">
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"
           [style.width]="trelloViewer.getStoragePercentage() + '%'"
