--- a/src/app/pages/@trello/shared/no-project/no-project.component.html
+++ b/src/app/pages/@trello/shared/no-project/no-project.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 text-center">
+<div class="col-xl-12 text-center">
   <div class="input-group">
     <p class="form-control"> No projects have been added </p>
   </div>
