--- a/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
@@ -7,14 +7,14 @@
     <p> Are you sure you want to perform this action? </p>
 
     <div class="row">
-      <div class="col-md-6">
-        <button type="button" class="btn btn-success col-md-12" (click)="confirmAction()" data-dismiss="modal">
+      <div class="col-xl-6">
+        <button type="button" class="btn btn-success col-xl-12" (click)="confirmAction()" data-dismiss="modal">
           <i class="fas fa-check"></i>
         </button>
       </div>
 
-      <div class="col-md-6">
-        <button type="button" class="btn btn-danger col-md-12" (click)="declineAction()" data-dismiss="modal">
+      <div class="col-xl-6">
+        <button type="button" class="btn btn-danger col-xl-12" (click)="declineAction()" data-dismiss="modal">
           <i class="fas fa-times"></i>
         </button>
       </div>
