--- a/src/app/@theme/components/page-header/page-header.component.html
+++ b/src/app/@theme/components/page-header/page-header.component.html
@@ -1,11 +1,11 @@
 <card>
   <div class="page-header">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-xl-4">
         <h3 class="page-title"> {{pageTitle}} </h3>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-xl-8">
         <breadcrumb></breadcrumb>
       </div>
     </div>
