--- a/src/app/@theme/components/page-header/page-header.component.scss
+++ b/src/app/@theme/components/page-header/page-header.component.scss
@@ -10,3 +10,17 @@
     }
   }
 }
+
+@media (max-width: 1440px) {
+  .col-xl-4,
+  .col-xl-8 {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .col-xl-4,
+  .col-xl-8 {
+    width: 100%;
+  }
+}
