--- a/src/app/pages/@theme/cards/cards.component.html
+++ b/src/app/pages/@theme/cards/cards.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-tools>
@@ -31,7 +31,7 @@
     </card>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-title>
@@ -49,7 +49,7 @@
     </card>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-tools>
@@ -73,7 +73,7 @@
     </card>
   </div>
 
-  <div class="col-md-6">
+  <div class="col-xl-6">
     <card>
       <card-header>
         <card-title>
@@ -87,7 +87,7 @@
     </card>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     <card>
       <card-header>
         <card-title>
@@ -103,7 +103,7 @@
     </card>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-xl-8">
     <card>
       <card-header>
         <card-title>
