--- a/src/app/pages/@trello/document/document.component.html
+++ b/src/app/pages/@trello/document/document.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <trello-page-logic cardTitle="Export Trello Project for Documentation" [trelloViewer]="trelloViewer">
-      <div class="col-md-12 export-field" *ngFor="let aTrelloProject of trelloViewer.trelloProjects; index as i">
+      <div class="col-xl-12 export-field" *ngFor="let aTrelloProject of trelloViewer.trelloProjects; index as i">
         <div class="input-group">
           <p class="form-control"> {{aTrelloProject.projectName}} </p>
 
@@ -15,7 +15,7 @@
         </div>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-xl-12">
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"
             [style.width]="exportPercentage + '%'" [attr.aria-valuenow]="exportPercentage"></div>
