--- a/src/app/pages/@trello/manage-projects/manage-projects.component.html
+++ b/src/app/pages/@trello/manage-projects/manage-projects.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <ng-container *ngIf="trelloViewer.areProjectsLoaded(); else projectsLoading">
       <card>
         <card-header>
@@ -21,7 +21,7 @@
 
         <card-body>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xl-12">
 
               <ng-container *ngIf="trelloViewer.trelloProjects.length !== 0; else noProjects">
 
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-12">
+                  <div class="col-xl-12">
                     <table class="table table-striped">
                       <thead>
                         <tr>
@@ -56,11 +56,11 @@
                             <i class="fas fa-edit"></i>
                           </button>
 
-                          <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#confirmationModal">
+                          <button class="btn btn-danger" type="button" (click)="removeTrelloProject(i)" data-toggle="modal" data-target="#confirmationModal">
                             <i class="fas fa-trash"></i>
                           </button>
 
-                          <confirmation-modal modalId="confirmationModal" (modalChoice)="removeTrelloProject($event, i)"></confirmation-modal>
+                          <confirmation-modal modalId="confirmationModal" (modalChoice)="confirmRemoveTrelloProject($event)"></confirmation-modal>
                         </td>
                       </tbody>
                     </table>
