--- a/src/app/pages/@trello/overview/overview.component.html
+++ b/src/app/pages/@trello/overview/overview.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <trello-page-logic cardTitle="Trello Projects Overview" [trelloViewer]="trelloViewer">
       <div class="row">
         <ng-container *ngFor="let aBoard of trelloViewer.uniqueBoards; let i = index">
@@ -14,7 +14,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-xl-12">
           <table class="table table-striped">
             <thead>
               <tr>
@@ -35,7 +35,7 @@
                 </td>
                 <td>
                   <div class="row progressColumn">
-                    <div class="col-md-7">
+                    <div class="col-xl-7">
                       <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"
                           [style.width]="aTrelloCard.cardPercentage + '%'"
@@ -43,7 +43,7 @@
                       </div>
                     </div>
 
-                    <div class="col-md-5 text-center">
+                    <div class="col-xl-5 text-center">
                       {{aTrelloCard.cardPercentage}}%
                     </div>
                   </div>
