--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,17 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-xl-12">
     <page-header></page-header>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     Project 1
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     Project 2
   </div>
 
-  <div class="col-md-4">
+  <div class="col-xl-4">
     Project 3
   </div>
 </div>
