--- a/src/app/pages/invalid-path/invalid-path.component.html
+++ b/src/app/pages/invalid-path/invalid-path.component.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
-  <div class="col-md-8">
+  <div class="col-xl-8">
     <h1> Oops! </h1>
     <h2> 404 - Page not found </h2>
 
