--- a/src/app/shared/components/left-navigation/left-navigation.component.scss
+++ b/src/app/shared/components/left-navigation/left-navigation.component.scss
@@ -71,6 +71,7 @@
             line-height: 30px;
 
             width: 25px;
+            text-align: center;
             margin-right: 15px;
           }
 
