Fix import data bug

--- a/src/app/shared/components/top-navigation/top-navigation.component.html
+++ b/src/app/shared/components/top-navigation/top-navigation.component.html
@@ -48,8 +48,8 @@
                 </div>
               </a>
 
-              <input type="file" accept=".json" hidden #importData (change)="importData($event)">
-              <a class="col-xl-6" (click)="importData.click()">
+              <input type="file" accept=".json" hidden #loadData (change)="importData($event)">
+              <a class="col-xl-6" (click)="loadData.click()">
                 <div class="dropdown-links">
                   <i class="fas fa-upload"></i>
                   <span> Import </span>
