Add table theme page

--- a/src/app/@theme/assets/scss/theme.scss
+++ b/src/app/@theme/assets/scss/theme.scss
@@ -5,6 +5,7 @@ Convention for CSS ordering is done using https://csscomb.herokuapp.com/online
 */
 
 @import "./theme-alert.scss";
+@import "./theme-table.scss";
 
 * {
   margin: 0;
