--- a/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.html
@@ -4,7 +4,7 @@
 
 <div class="content">
   <div class="content-body">
-    <router-outlet></router-outlet>
+    <router-outlet (activate)="routeChanged()"></router-outlet>
   </div>
 
   <content-footer></content-footer>
