--- a/src/app/pages/@theme/cards/cards.component.html
+++ b/src/app/pages/@theme/cards/cards.component.html
@@ -112,7 +112,7 @@
       </card-header>
 
       <card-body>
-        <table style="width:100%">
+        <table class="table table-hover">
           <tr>
             <th>Firstname</th>
             <th>Lastname</th>
