--- a/src/app/pages/@trello/manage-projects/manage-projects.component.html
+++ b/src/app/pages/@trello/manage-projects/manage-projects.component.html
@@ -39,31 +39,33 @@
 
                 <div class="row">
                   <div class="col-xl-12">
-                    <table class="table table-striped">
-                      <thead>
-                        <tr>
-                          <th> Project Name </th>
-                          <th> Expiry Date </th>
-                          <th> Action </th>
-                        </tr>
-                      </thead>
+                    <div class="table-responsive" data-simplebar data-simplebar-auto-hide="false">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th> Project Name </th>
+                            <th> Expiry Date </th>
+                            <th> Action </th>
+                          </tr>
+                        </thead>
 
-                      <tbody *ngFor="let aTrelloProject of trelloViewer.trelloProjects | trelloProjectNameFilter: projectNameSearch; index as i">
-                        <td> {{aTrelloProject.projectName}} </td>
-                        <td> {{aTrelloProject.expiryDate | date: 'dd MMMM yyyy'}} </td>
-                        <td>
-                          <button class="btn btn-success" type="button" (click)="editTrelloProject(i)" data-toggle="modal" data-target="#manageProjectModal">
-                            <i class="fas fa-edit"></i>
-                          </button>
+                        <tbody *ngFor="let aTrelloProject of trelloViewer.trelloProjects | trelloProjectNameFilter: projectNameSearch; index as i">
+                          <td> {{aTrelloProject.projectName}} </td>
+                          <td> {{aTrelloProject.expiryDate | date: 'dd MMMM yyyy'}} </td>
+                          <td>
+                            <button class="btn btn-success" type="button" (click)="editTrelloProject(i)" data-toggle="modal" data-target="#manageProjectModal">
+                              <i class="fas fa-edit"></i>
+                            </button>
 
-                          <button class="btn btn-danger" type="button" (click)="removeTrelloProject(i)" data-toggle="modal" data-target="#confirmationModal">
-                            <i class="fas fa-trash"></i>
-                          </button>
+                            <button class="btn btn-danger" type="button" (click)="removeTrelloProject(i)" data-toggle="modal" data-target="#confirmationModal">
+                              <i class="fas fa-trash"></i>
+                            </button>
 
-                          <confirmation-modal modalId="confirmationModal" (modalChoice)="confirmRemoveTrelloProject($event)"></confirmation-modal>
-                        </td>
-                      </tbody>
-                    </table>
+                            <confirmation-modal modalId="confirmationModal" (modalChoice)="confirmRemoveTrelloProject($event)"></confirmation-modal>
+                          </td>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
 
