--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,15 +3,21 @@
     <page-header></page-header>
   </div>
 
-  <div class="col-xl-4">
-    Project 1
+  <div class="col-xl-6">
+    <card class="project">
+      <a [routerLink]="['/theme/alerts']">
+        <i class="fas fa-palette"></i>
+        <p> Dashboard Theme </p>
+      </a>
+    </card>
   </div>
 
-  <div class="col-xl-4">
-    Project 2
-  </div>
-
-  <div class="col-xl-4">
-    Project 3
+  <div class="col-xl-6">
+    <card class="project">
+      <a [routerLink]="['/trello/manage']">
+        <i class="fas fa-chart-bar"></i>
+        <p> Trello Analytics </p>
+      </a>
+    </card>
   </div>
 </div>
