--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,18 +5,39 @@
 
   <div class="col-xl-6">
     <card class="project">
-      <a [routerLink]="['/theme/alerts']">
-        <i class="fas fa-palette"></i>
-        <p> Dashboard Theme </p>
+      <a routerLink="/theme/alerts">
+        <card-body>
+          <div class="row">
+            <div class="col-xl-3">
+              <i class="fas fa-pencil-ruler rounded-circle"></i>
+            </div>
+
+            <div class="col-xl-9">
+              <h4> Dashboard Theme </h4>
+              <p> The styled and created components are used to build the other sections are represented in the dashboard theme section. </p>
+            </div>
+          </div>
+        </card-body>
       </a>
     </card>
   </div>
 
   <div class="col-xl-6">
     <card class="project">
-      <a [routerLink]="['/trello/manage']">
-        <i class="fas fa-chart-bar"></i>
-        <p> Trello Analytics </p>
+
+      <a routerLink="/trello/manage">
+        <card-body>
+          <div class="row">
+            <div class="col-xl-3">
+              <i class="fas fa-chart-bar rounded-circle"></i>
+            </div>
+
+            <div class="col-xl-9">
+              <h4> Trello Analytics </h4>
+              <p> The Trello analytics provides a visual insight on the provided Trello board which affecting the original project. </p>
+            </div>
+          </div>
+        </card-body>
       </a>
     </card>
   </div>
