--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,25 +1,48 @@
-.project ::ng-deep .card {
-  position: relative;
-  background: #2f3d4a;
-
+.project {
   a {
-    color: #fff;
-    padding: 30px 0;
-    text-align: center;
+    color: #455a64;
     text-decoration: none;
 
     &:hover,
     &:focus {
-      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14);
+      box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57) !important;
     }
 
-    i {
-      font-size: 70px;
-      padding-bottom: 35px;
+    .col-xl-3 {
+      margin: auto;
+      text-align: center;
+
+      .rounded-circle {
+        padding: 20px;
+        font-size: 35px;
+        text-align: center;
+
+        color: #fff;
+        background-color: #1d88e6;
+      }
     }
 
-    p {
-      font-weight: 800;
+    .col-xl-9 {
+      padding-top: 10px;
+      padding-bottom: 10px;
+
+      h4 {
+        font-weight: 600;
+      }
+
+      p {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .project {
+    a {
+      .col-xl-3 {
+        margin-bottom: 10px;
+      }
     }
   }
 }
