--- a/src/app/pages/@theme/tables/tables.component.html
+++ b/src/app/pages/@theme/tables/tables.component.html
@@ -227,7 +227,7 @@
       </card-header>
 
       <card-body>
-        <div class="table-responsive" data-simplebar data-simplebar-auto-hide="false">
+        <div class="table-responsive-xl" data-simplebar data-simplebar-auto-hide="false">
           <table class="table">
             <thead>
               <tr>
