--- a/src/app/shared/components/top-navigation/top-navigation.component.html
+++ b/src/app/shared/components/top-navigation/top-navigation.component.html
@@ -19,8 +19,7 @@
               <i class="fa fa-search search-icon"></i>
             </button>
 
-            <input class="form-control navigationSearchBox" type="text" placeholder="Search ..."
-              (focus)="onSearchBoxFocus()" (blur)="onSearchBoxBlur()">
+            <input class="form-control navigationSearchBox" type="text" placeholder="Search ..." (focus)="onSearchBoxFocus()" (blur)="onSearchBoxBlur()">
           </div>
         </form>
 
