--- a/src/app/@theme/components/card/card-tools.component.html
+++ b/src/app/@theme/components/card/card-tools.component.html
@@ -1,3 +1,5 @@
 <div class="card-tools float-right">
-  <ng-content></ng-content>
+  <div class="row">
+    <ng-content></ng-content>
+  </div>
 </div>
