--- a/src/app/pages/@trello/overview/overview.component.scss
+++ b/src/app/pages/@trello/overview/overview.component.scss
@@ -1,40 +1,28 @@
-.table-striped {
-  th {
-    border: 0px;
-    font-weight: 500;
-    vertical-align: bottom;
-    padding: 12px;
-  }
+.searchArea {
+  padding-bottom: 15px;
+}
 
-  td {
-    border-color: #f3f1f1;
-    padding: 12px;
-    vertical-align: top;
-    border-top: 1px solid #dee2e6;
-  }
+.table tbody {
+  .label {
+    padding: 3px 10px;
+    line-height: 13px;
+    color: #ffffff;
+    border-radius: 4px;
+    font-size: 14px;
 
-  tbody tr:nth-of-type(odd) {
-    background: #f2f4f8;
-  }
-
-  tbody {
-    .label {
-      padding: 3px 10px;
-      line-height: 13px;
-      color: #ffffff;
-      border-radius: 4px;
-      font-size: 14px;
+    &:not(:last-child) {
+      margin-right: 10px;
     }
+  }
 
-    .progressColumn {
-      align-items: center;
-      padding-left: 15px;
-      padding-right: 15px;
+  .progressColumn {
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
 
-      .col-xl-5,
-      .col-xl-7 {
-        padding: 0;
-      }
+    .col-xl-5,
+    .col-xl-7 {
+      padding: 0;
     }
   }
 }
